--- a/index.htm
+++ b/index.htm
@@ -191,25 +191,6 @@
             stroke: var(--color-text);
         }
 
-        /* Quotes Dark Mode */
-
-        body.dark-mode .quotes-container,
-body.dark-mode .quote-of-day {
-    background: #16161a;
-    border-color: #2a2a2e;
-}
-
-body.dark-mode .copy-btn,
-body.dark-mode .share-btn {
-    border-color: #2a2a2e;
-    color: #f5f5f5;
-}
-
-body.dark-mode .copy-btn:hover,
-body.dark-mode .share-btn:hover {
-    background: var(--color-accent);
-    color: white;
-}
 
 
         /* Hero Section */
@@ -493,24 +474,93 @@ body.dark-mode .share-btn:hover {
     border-color: var(--color-accent);
 }
 
-      #quotes {
+/* ===============================
+   QUOTES SECTION (FIXED)
+=================================*/
+
+#quotes {
     padding: 60px 20px;
-    background-color: #f9f9f9;
     text-align: center;
 }
 
+.quote-of-day {
+    border: 1px solid var(--color-border);
+    border-radius: 18px;
+    padding: 2rem;
+    margin-bottom: 3rem;
+    background: var(--color-card-bg);
+    transition: all 0.3s ease;
+}
+
+.quote-of-day h3 {
+    font-family: var(--font-sans);
+    margin-bottom: 1rem;
+}
+
+#daily-quote-text {
+    font-size: 1.3rem;
+    font-style: italic;
+}
+
+/* Quote List */
+.quotes-container {
+    background: var(--color-card-bg);
+    border: 1px solid var(--color-border);
+    border-radius: 18px;
+    padding: 2rem;
+}
+
 .quotes-list {
-    list-style-type: disc;
-    max-width: 700px;
-    margin: 30px auto;
-    text-align: left;
-    font-size: 18px;
-    line-height: 1.8;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .quotes-list li {
-    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1.5rem;
+    font-size: 1.2rem;
 }
+
+.quote-text {
+    flex: 1;
+    font-style: italic;
+}
+
+/* Copy Button */
+.copy-btn {
+    font-family: var(--font-sans);
+    font-size: 0.85rem;
+    padding: 0.4rem 0.8rem;
+    border-radius: 20px;
+    border: 1px solid var(--color-border);
+    background: transparent;
+    color: var(--color-text);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.copy-btn:hover {
+    background: var(--color-accent);
+    color: white;
+    border-color: var(--color-accent);
+}
+
+/* Scroll Reveal */
+.reveal-quote {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: transform 0.8s ease, opacity 0.8s ease;
+}
+
+.reveal-quote.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 
         body.dark-mode .content-disclaimer {
     background: rgba(255,255,255,0.03);
@@ -1064,35 +1114,35 @@ body.dark-mode .share-btn:hover {
     <!-- All Quotes -->
     <div class="quotes-container">
         <ul class="quotes-list">
-            <li>
+            <li class="reveal-quote">
                 <span class="quote-text">Your comfort zone is renting space in your potential.</span>
                 <button class="copy-btn">Copy</button>
             </li>
-            <li>
+            <li class="reveal-quote">
                 <span class="quote-text">Discipline is choosing what you want most over what you want now.</span>
                 <button class="copy-btn">Copy</button>
             </li>
-            <li>
+            <li class="reveal-quote">
                 <span class="quote-text">If you can control your focus, you can control your future.</span>
                 <button class="copy-btn">Copy</button>
             </li>
-            <li>
+            <li class="reveal-quote">
                 <span class="quote-text">Pain is temporary. Regret is permanent.</span>
                 <button class="copy-btn">Copy</button>
             </li>
-            <li>
+            <li class="reveal-quote">
                 <span class="quote-text">Small actions done daily beat motivation done occasionally.</span>
                 <button class="copy-btn">Copy</button>
             </li>
-            <li>
+            <li class="reveal-quote">
                 <span class="quote-text">You don’t lack talent — you lack consistent effort.</span>
                 <button class="copy-btn">Copy</button>
             </li>
-            <li>
+            <li class="reveal-quote">
                 <span class="quote-text">Be the driver of your life, not the passenger of your habits.</span>
                 <button class="copy-btn">Copy</button>
             </li>
-            <li>
+            <li class="reveal-quote">
                 <span class="quote-text">Your future is hidden inside your daily routine.</span>
                 <button class="copy-btn">Copy</button>
             </li>
@@ -1319,7 +1369,16 @@ const quotes = [
 function getDailyQuote() {
     const today = new Date().getDate();
     const index = today % quotes.length;
-    document.getElementById("daily-quote-text").textContent = quotes[index];
+
+    const quoteEl = document.getElementById("daily-quote-text");
+
+    quoteEl.style.opacity = 0;
+
+    setTimeout(() => {
+        quoteEl.textContent = quotes[index];
+        quoteEl.style.transition = "opacity 0.5s ease";
+        quoteEl.style.opacity = 1;
+    }, 200);
 }
 
 getDailyQuote();
