--- a/index.htm
+++ b/index.htm
@@ -441,10 +441,10 @@ Here are some of my personal favorite pieces :</p>
                     <li class="reveal-quote"><span class="quote-text">“All is flux, nothing stays still” ― Plato</span><button class="copy-btn">Copy</button></li>
                     <li class="reveal-quote"><span class="quote-text">"Do it or don't do it, you will regret both." — Søren Kierkegaard</span><button class="copy-btn">Copy</button></li>
                     <li class="reveal-quote"><span class="quote-text">“No one is more hated than he who speaks the truth.” ― Plato</span><button class="copy-btn">Copy</button></li>
-                    <li class="reveal-quote"><span class="quote-text">"People do not act according to truth. They act according to the truths they can live with." - The Modern Machiavelli</span><button class="copy-btn">Copy</button></li>
+                    <li class="reveal-quote"><span class="quote-text">"People do not act according to truth. They act according to the truths they can live with." ― The Modern Machiavelli</span><button class="copy-btn">Copy</button></li>
                     <li class="reveal-quote"><span class="quote-text">I love people who post whatever they want on social media. It means they've learned to choose self-expression over other people's opinions. And that's beautiful.</span><button class="copy-btn">Copy</button></li>
                     <li class="reveal-quote"><span class="quote-text">Mother is waiting for success, but Son cries all night for a girl.</span><button class="copy-btn">Copy</button></li>
-                    <li class="reveal-quote"><span class="quote-text">Be powerful, and people will pretend to love you." – Aline Frisch</span><button class="copy-btn">Copy</button></li>
+                    <li class="reveal-quote"><span class="quote-text">Be powerful, and people will pretend to love you." ― Aline Frisch</span><button class="copy-btn">Copy</button></li>
                 </ul>
             </div>
         </section>
