Add article on Epstein case and update quotes
Added a new article discussing the Epstein case and its implications on power dynamics. Updated quotes for consistency in formatting.

--- a/index.htm
+++ b/index.htm
@@ -358,6 +358,34 @@
 Here are some of my personal favorite pieces :</p>
             <div class="article-grid">
                 <div class="article-card" onclick="toggleArticle(this)">
+    <div class="article-meta">International Political News · Opinion</div>
+    <h3>The Epstein Files and the Two-Tiered World You Live In</h3>
+    <p>The Epstein case isn't just a scandal — it's a mirror. And most people don't like what they see. Here's what I think is really going on, and why we keep looking away.</p>
+    <div class="article-full-content">
+        <h4>The Matrix Is Laughing at You</h4>
+        <p>I've spent days buried in the Epstein files. Names, flight logs, island records, documented connections to the most powerful institutions on earth. The evidence of organised depravity at the highest levels of power is not a theory — it is documented, it is public, and almost nothing has happened as a result.</p>
+        <p>Think about that for a second. Really sit with it.</p>
+        <h4>Two Sets of Rules</h4>
+        <p>You speed five kilometres over the limit — there's a fine waiting. You miss a tax payment — the system crushes you with interest, penalties, and paperwork. You work sixty hours a week, pay your taxes, follow the rules, and still feel like you're barely keeping up.</p>
+        <p>Meanwhile, individuals with documented connections to one of the most notorious criminal networks in modern history continue to attend galas, sit on boards, advise governments, and go golfing on weekdays. The same institutions that will prosecute an ordinary person for a paperwork error somehow move at glacial pace — or not at all — when power is involved.</p>
+        <p>This is not a conspiracy theory. This is a pattern that plays out in court records, in settled lawsuits, in names that appear on flight manifests and then quietly disappear from news cycles. The files exist. The documentation exists. The accountability, for the most part, does not.</p>
+        <h4>The Drip Strategy</h4>
+        <p>Information about Epstein has been released slowly, selectively, over years. Each release generates a week of outrage, millions of social media posts, trending hashtags — and then the conversation moves on. A new controversy replaces it. A culture war erupts somewhere else. Left fights right. Right fights left. Everyone is exhausted and nobody is focused.</p>
+        <p>Whether this is coordinated or simply the natural behaviour of a media ecosystem that profits from attention churn doesn't ultimately matter. The effect is the same: sustained accountability becomes impossible when outrage has a 72-hour shelf life.</p>
+        <p>You are not crazy for noticing this. You are paying attention.</p>
+        <h4>The Real Humiliation</h4>
+        <p>The deepest insult isn't that powerful people protect each other — that has been true throughout history. The real insult is that we are handed just enough information to feel informed, just enough outrage to feel engaged, and just enough distraction to never actually organise around any of it.</p>
+        <p>We debate left vs. right. We argue about which politician is worse. We scroll. We react. We move on. The structural conditions that allow this kind of impunity — the lobbying, the legal insulation, the revolving doors between regulators and the industries they regulate — remain completely untouched.</p>
+        <p>That is the system working exactly as designed. Not for you. For the people at the top of it.</p>
+        <h4>What Actually Changes Things</h4>
+        <p>I don't have a clean answer. I'm twenty-something years old studying engineering in India — I'm not pretending to have the solution to centuries of institutional capture. But I do think the starting point is refusing the left-vs-right trap entirely. That framing is a gift to the people who benefit from your distraction.</p>
+        <p>The question worth asking is never "which party is better?" It is: who does this system actually serve, and what would have to change structurally for that to be different?</p>
+        <p>Read the documents. Not the headlines about the documents — the actual documents. Follow the money, not the talking heads arguing about it. Stay with a story longer than the algorithm wants you to.</p>
+        <p>And the next time someone tells you "that's just how power works" — ask them why they've decided that's acceptable.</p>
+        <p style="font-style: italic; color: var(--color-text-light); font-size: 1.05rem; border-top: 1px solid var(--color-border); padding-top: 1.5rem; margin-top: 1rem;">— This is my personal opinion, based on publicly available information and court records. I encourage you to read primary sources and form your own view.</p>
+    </div>
+</div>
+                <div class="article-card" onclick="toggleArticle(this)">
                     <div class="article-meta">Frameworks &amp; Tools</div>
                     <h3>How to Stop Procrastinating</h3>
                     <p>A deep dive into Skinner's Law and the pleasure-pain framework that governs human behavior. Learn how to hack your motivation when you find yourself avoiding important work.</p>
@@ -441,10 +469,10 @@ Here are some of my personal favorite pieces :</p>
                     <li class="reveal-quote"><span class="quote-text">“All is flux, nothing stays still” ― Plato</span><button class="copy-btn">Copy</button></li>
                     <li class="reveal-quote"><span class="quote-text">"Do it or don't do it, you will regret both." — Søren Kierkegaard</span><button class="copy-btn">Copy</button></li>
                     <li class="reveal-quote"><span class="quote-text">“No one is more hated than he who speaks the truth.” ― Plato</span><button class="copy-btn">Copy</button></li>
-                    <li class="reveal-quote"><span class="quote-text">"People do not act according to truth. They act according to the truths they can live with." ― The Modern Machiavelli</span><button class="copy-btn">Copy</button></li>
+                    <li class="reveal-quote"><span class="quote-text">"People do not act according to truth. They act according to the truths they can live with." - The Modern Machiavelli</span><button class="copy-btn">Copy</button></li>
                     <li class="reveal-quote"><span class="quote-text">I love people who post whatever they want on social media. It means they've learned to choose self-expression over other people's opinions. And that's beautiful.</span><button class="copy-btn">Copy</button></li>
                     <li class="reveal-quote"><span class="quote-text">Mother is waiting for success, but Son cries all night for a girl.</span><button class="copy-btn">Copy</button></li>
-                    <li class="reveal-quote"><span class="quote-text">Be powerful, and people will pretend to love you." ― Aline Frisch</span><button class="copy-btn">Copy</button></li>
+                    <li class="reveal-quote"><span class="quote-text">Be powerful, and people will pretend to love you." – Aline Frisch</span><button class="copy-btn">Copy</button></li>
                 </ul>
             </div>
         </section>
